[gd_scene load_steps=2 format=3 uid="uid://ldnj5jjy1leg"]

[ext_resource type="Script" path="res://logic/spawner.gd" id="1_lcaoe"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_lcaoe")
burst_to_spawn = 3
radius = 250.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
